--- a/.pyastsearch.yaml
+++ b/.pyastsearch.yaml
@@ -1,6 +1,6 @@
 
-after_context: 3 
-before_context: 3
+after_context: 0
+before_context: 0
 folder: 'tests'
 parallel: true
 rules:
@@ -8,17 +8,17 @@ rules:
     name: "B001"
     description: "Classes with 'Var' in name"
     severity: "warning"
-    what: "bad practice"
+    why: "bad practice"
     ignore: false
   ".//Constant[not(ancestor::Assign) and @type='int']":
     name: "R001"
     description: "Constant with int type"
-    what: "bad practice"
-    severity: "reject"
+    why: "bad practice"
+    severity: "warning"
     ignore: false
   ".//Constant":
-    name: "R001"
+    name: "R002"
     description: "Constant with int type"
-    what: "bad practice"
+    why: "security reasons"
     severity: "reject"
     ignore: false
