--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ commonmark==0.9.1
     # via rich
 lxml==4.8.0
     # via -r requirements.in
+prompt-toolkit==3.0.29
+    # via -r requirements.in
 pyaml==21.10.1
     # via -r requirements.in
 pygments==2.12.0
@@ -18,5 +20,5 @@ pyyaml==6.0
     # via pyaml
 rich==12.4.1
     # via -r requirements.in
-tabulate==0.8.9
-    # via -r requirements.in
+wcwidth==0.2.5
+    # via prompt-toolkit
