--- a/.pyastrx.yaml
+++ b/.pyastrx.yaml
@@ -9,16 +9,15 @@ rules:
     description: "Can create bugs that are hard to find"
     severity: "error"
     why: "bad practice"
-    ignore: false
+    use_in_linter: true
   ".//Constant[not(ancestor::Assign) and re:match('https?://', @value)]":
     name: "deafult with url"
     description: "In the past, this behavior a lot of trouble for ours iot team"
     why: "bad practice"
     severity: "warning"
-    ignore: false
   "//ClassDef[re:match('.*Var', @name)]":
     name: "B001"
     description: "Classes with 'Var' in name"
     severity: "warning"
     why: "bad practice"
-    ignore: false
+    use_in_linter: false
