--- a/.pyastrx.yaml
+++ b/.pyastrx.yaml
@@ -1,7 +1,7 @@
 
 after_context: 3
 before_context: 3
-folder: 'tests'
+#folder: 'tests'
 parallel: true
 rules:
   "//defaults/*[self::Dict or self::List or self::Set or self::Caller]":
@@ -15,6 +15,7 @@ rules:
     description: "In the past, this behavior a lot of trouble for ours iot team"
     why: "bad practice"
     severity: "warning"
+    use_in_linter: false
   "//ClassDef[re:match('.*Var', @name)]":
     name: "B001"
     description: "Classes with 'Var' in name"
