feat: allow to use a dialog selection to choose which files to analyze

--- a/.pyastrx.yaml
+++ b/.pyastrx.yaml
@@ -2,6 +2,8 @@ after_context: 5
 before_context: 3
 #folder: 'tests'
 parallel: true
+exclude: [".venv", "docs"]
+interactive_files: True
 rules:
   "//defaults/*[self::Dict or self::List or self::Set or self::Caller]":
     name: "mutable-defaults"
