--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ colorama==0.4.4
     # via -r requirements.in
 commonmark==0.9.1
     # via rich
+gast==0.5.3
+    # via -r requirements.in
 lxml==4.8.0
     # via -r requirements.in
 prompt-toolkit==3.0.29
