--- a/.pyastrx.yaml
+++ b/.pyastrx.yaml
@@ -2,10 +2,11 @@ after_context: 5
 before_context: 3
 #folder: 'tests'
 parallel: true
-exclude: [".venv", "docs"]
-interactive_files: True
+folder: "dummy_tests"
+interactive_files: true
+quiet: false
 rules:
-  "//defaults/*[self::Dict or self::List or self::Set or self::Caller]":
+  "//defaults/*[self::Dict or self::List or self::Set or self::Call]":
     name: "mutable-defaults"
     description: "Can create bugs that are hard to find"
     severity: "error"
@@ -29,3 +30,28 @@ rules:
     severity: "warning"
     why: "bad practice"
     use_in_linter: true
+  "//FunctionDef[@name=body//Call/func/Name/@id and not(parent::node()/parent::ClassDef)]":
+    name: "B003"
+    description: "recursion func"
+    severity: "info"
+    why: "bad practice"
+    use_in_linter: true
+  "//ClassDef/body/FunctionDef[@name=body//Call/func/Attribute[value/Name[@id='self']]/@attr]":
+    name: "recursion class"
+    description: "Recursion"
+    severity: "info"
+    why: "just a info"
+    use_in_linter: false
+  "//FunctionDef/body/Global/names[not(item=../../Assign/targets/Name/@id)]":
+    name: "unncessary-global"
+    description: "Global variables are not used"
+    severity: "error"
+    why: "bad practice"
+    use_in_linter: false
+  "//Global":
+    name: "global-keyword"
+    description: "Changing the values of global variables creates bugs"
+    severity: "info"
+    why: "bad practice"
+    use_in_linter: false
+
