--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -48,12 +48,18 @@ jinja2==3.1.2
     # via sphinx
 lxml==4.8.0
     # via sphinx-material
+lxml-stubs==0.4.0
+    # via -r requirements_dev.in
 markupsafe==2.1.1
     # via jinja2
 mccabe==0.6.1
     # via flake8
+mypy==0.950
+    # via -r requirements_dev.in
 mypy-extensions==0.4.3
-    # via black
+    # via
+    #   black
+    #   mypy
 nodeenv==1.6.0
     # via pre-commit
 packaging==21.3
@@ -133,8 +139,13 @@ toml==0.10.2
 tomli==2.0.1
     # via
     #   black
+    #   mypy
     #   pep517
     #   pytest
+types-pyyaml==6.0.7
+    # via -r requirements_dev.in
+typing-extensions==4.2.0
+    # via mypy
 unidecode==1.3.4
     # via python-slugify
 untokenize==0.1.1
