--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,11 +20,17 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install lxml
+        run: |
+          sudo apt-get install build-dep libxml2-dev libxslt-dev
+          sudo apt-get install python3-lxml
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pytest
+          pip install Cython
           if [ -f requirements_dev.txt ]; then pip install -r requirements_dev.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           python setup.py install
       - name: Test with pytest
         run: |
