--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,15 +23,19 @@ jobs:
       - name: Install lxml
         run: |
           sudo apt-get install libxml2-dev libxslt-dev
-          sudo apt-get install python3-lxml
-      - name: Install dependencies
+      - name: Install dev dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
           pip install Cython
           if [ -f requirements_dev.txt ]; then pip install -r requirements_dev.txt; fi
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          python setup.py install
+          pre-commit install
+      - name: run pre-commit
+        run: |
+          pre-commit run --all-files
+      - name: Install dependencies
+        run: if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Install project
+        run: python setup.py install
       - name: Test with pytest
         run: |
           pytest -svv tests
