--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ rich==13.8.1
     # via -r requirements.in
 typing-extensions==4.12.2
     # via -r requirements.in
-watchdog==5.0.2
+watchdog
     # via -r requirements.in
 wcwidth==0.2.13
     # via prompt-toolkit
