--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,8 @@ repos:
         entry: ./.pre-commit-hook/main.py
         language: script
         args: ["-q"]
+        files: ^pyastrx/
+        exclude: ^tests/
         types: ["python"]
         description: Check for any violations using the pyastrx.yaml config
   - repo: https://github.com/pre-commit/pre-commit-hooks
